Ukończenie większości formularzy prostych

--- a/src/wiadraksite/templates/czujniki/dodawanie_czujnika.html
+++ b/src/wiadraksite/templates/czujniki/dodawanie_czujnika.html
@@ -8,7 +8,7 @@
     <div class="modal-content rounded-5 shadow">
       <div class="modal-header p-5  ">
         
-        <h2 class="fw-bold ">Dodawanie maszyny</h2>
+        <h2 class="fw-bold ">Dodawanie czujnika</h2>
         
       </div>
 
@@ -20,7 +20,7 @@
           </div>
 
           
-          <button class="w-100 mb-2 btn btn-lg rounded-4 btn-primary" type="submit">Dodaj maszynę</button>
+          <button class="w-100 mb-2 btn btn-lg rounded-4 btn-primary" type="submit">Dodaj czujnik</button>
           
           <hr class="my-4">
          
