--- a/src/wiadraksite/templates/maszyny/maszyny.html
+++ b/src/wiadraksite/templates/maszyny/maszyny.html
@@ -5,7 +5,7 @@
 <div id="mySidebar" class="sidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>           
                 <a href="{% url 'dodawanie_maszyny' %}">Dodaj maszynę</a>
-                 <a href="">Czujniki</a>
+                 <a href="{% url 'czujniki' %}">Czujniki</a>
     </div>
 {% endif %}
 
