--- a/src/wiadraksite/templates/czujniki/czujniki.html
+++ b/src/wiadraksite/templates/czujniki/czujniki.html
@@ -1,30 +1,15 @@
 {% extends 'szablon.html' %}
 
 {% block content %}
-<div id="mySidebar" class="sidebar">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>           
-                <a href="{% url 'dodawanie_maszyny' %}">Dodaj maszynę</a>
-                 <a href="">Czujniki</a>
-    </div>
-<script>
-function openNav() {
-  document.getElementById("mySidebar").style.width = "250px";
-  document.getElementById("main").style.marginLeft = "250px";
-}
 
-function closeNav() {
-  document.getElementById("mySidebar").style.width = "0";
-  document.getElementById("main").style.marginLeft= "0";
-}
-</script>
 
 <div id ="main">
-	<button class="openbtn" onclick="openNav()">☰ Pokaż pasek</button>
-{% for maszyna in maszyny %}
+
+{% for czujnik in czujniki %}
 <div class="container-fluid">
-	<a href="{{ maszyna.id }}">
+	<a href="{{ czujnik.id }}">
 		<div class="container border  bg-dark text-light">
-			<h5>{{ maszyna.id }}. {{ maszyna.nazwa }} </h5>
+			<h5>{{ czujnik.id }}. {{ czujnik.nazwa }} </h5>
 		</div>
 	</a>
 </div>
