--- a/src/wiadraksite/templates/czujniki/usuwanie_czujnika.html
+++ b/src/wiadraksite/templates/czujniki/usuwanie_czujnika.html
@@ -6,14 +6,14 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content rounded-5 shadow">
       <div class="modal-header p-5  ">
-                <h2 class="fw-bold ">Usuwanie maszyny</h2>
+                <h2 class="fw-bold ">Usuwanie czujnika</h2>
       </div>
 
       <div class="modal-body p-5 pt-0">
         <form class="" action="" method='POST'>
           {% csrf_token %}
         
-          <button class="w-100 mb-2 btn btn-lg rounded-4 btn-primary" type="submit">Usuń maszynę</button>
+          <button class="w-100 mb-2 btn btn-lg rounded-4 btn-primary" type="submit">Usuń czujnik</button>
           <a class="btn w-100 mb-2 btn-lg btn-outline-secondary" href="{% url 'detale_maszyny' object.id %}">Anuluj</a>
           <hr class="my-4">
          
